@@ -1,5 +1,11 @@
 Changes with Apache 1.3.18
 
+  *) SECURITY: The default installation could lead to mod_negotiation
+     and mod_dir/mod_autoindex displaying a directory listing instead of
+     the index.html.* files, if a very long path was created artificially
+     by using many slashes. Now a 403 FORBIDDEN is returned.
+     [Martin Kraemer]
+     
   *) Trailing slashes (if they exist) are now removed from ServerRoot,
      because there were known problems with them.
      ["William A. Rowe, Jr." <wrowe@rowe-clan.net>]
